--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#Server Port Configuration
+#Server Configuration
 server.port=8088
 
 #Database Configuration
@@ -19,4 +19,5 @@ spring.quartz.properties.org.quartz.jobStore.isClustered=true
 jsch.configuration.key=StrictHostKeyChecking
 jsch.configuration.value=no
 channel.type=sftp
+file.location=D:/SecureFile
 
