--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,5 +19,7 @@ spring.quartz.properties.org.quartz.jobStore.isClustered=true
 jsch.configuration.key=StrictHostKeyChecking
 jsch.configuration.value=no
 channel.type=sftp
-file.location=D:/SecureFile
+secure.file.location=D:/SecureFile
+local.file.location=D:/DotMed
+
 
