--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -1,9 +1,9 @@
 #Database Configuration
-spring.datasource.url=jdbc:mysql://192.168.50.14:3306/db_dotmed_stage
+spring.datasource.url=jdbc:mysql://192.168.50.14:3306/db_dotmed_stage?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=user_dotmed_stage
 spring.datasource.password=LBz76_Kc0P82U/j
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 ##Quartz Scheduler Configuration
