--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,3 @@
-#Server Configuration
-server.port=8088
-
 #Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/file_uploader
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -11,7 +8,7 @@ spring.jpa.show-sql=true
 
 ##Quartz Scheduler Configuration
 spring.quartz.job-store-type=jdbc
-#spring.quartz.jdbc.initialize-schema=always
+spring.quartz.jdbc.initialize-schema=always
 spring.quartz.properties.org.quartz.threadPool.threadCount= 20
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 
