--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,3 @@
-
-
 #Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/file_uploader
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -18,5 +16,6 @@ spring.quartz.properties.org.quartz.jobStore.isClustered=true
 jsch.configuration.key=StrictHostKeyChecking
 jsch.configuration.value=no
 channel.type=sftp
-file.location=D:/SecureFile
+secure.file.location=D:/SecureFile
+local.file.location=D:/DotMed
 
