--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -1,5 +1,5 @@
 #Database Configuration
-spring.datasource.url=jdbc:mysql://192.168.50.14:3306/db_dotmed_stage?useSSL=false
+spring.datasource.url=jdbc:mysql://103.191.179.228:3306/db_dotmed_stage?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=user_dotmed_stage
 spring.datasource.password=LBz76_Kc0P82U/j
@@ -16,5 +16,6 @@ spring.quartz.properties.org.quartz.jobStore.isClustered=true
 jsch.configuration.key=StrictHostKeyChecking
 jsch.configuration.value=no
 channel.type=sftp
-file.location=D:/SecureFile
+secure.file.location=D:/SecureFile
+local.file.location=D:/DotMed
 
