--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,12 +3,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/file_uploader
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 ##Quartz Scheduler Configuration
 spring.quartz.job-store-type=jdbc
-spring.quartz.jdbc.initialize-schema=always
+#spring.quartz.jdbc.initialize-schema=always
 spring.quartz.properties.org.quartz.threadPool.threadCount= 20
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 
