latest updated code

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=false
 
 ##Quartz Scheduler Configuration
 spring.quartz.job-store-type=jdbc
-spring.quartz.jdbc.initialize-schema=always
+#spring.quartz.jdbc.initialize-schema=always
 spring.quartz.properties.org.quartz.threadPool.threadCount= 20
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 
