--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -1,8 +1,8 @@
 #Database Configuration
-spring.datasource.url=jdbc:mysql://103.191.179.228:3306/db_dotmed_stage?useSSL=false
+spring.datasource.url=jdbc:mysql://10.104.68.86:3306/dotmed_db 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=user_dotmed_stage
-spring.datasource.password=LBz76_Kc0P82U/j
+spring.datasource.username=dotmed_user
+spring.datasource.password=d0tmEd@369#
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
@@ -16,6 +16,6 @@ spring.quartz.properties.org.quartz.jobStore.isClustered=true
 jsch.configuration.key=StrictHostKeyChecking
 jsch.configuration.value=no
 channel.type=sftp
-secure.file.location=D:/SecureFile
-local.file.location=D:/DotMed
+secure.file.location=/home/appadmin/dotmed_project/secret_files
+local.file.location=/home/appadmin/dotmed_project/local_storage
 
