server and job related api implemented and multi-threading for get job implementation done

--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -9,13 +9,16 @@ spring.jpa.show-sql=true
 ##Quartz Scheduler Configuration
 spring.quartz.job-store-type=jdbc
 spring.quartz.jdbc.initialize-schema=always
-spring.quartz.properties.org.quartz.threadPool.threadCount= 20
+spring.quartz.properties.org.quartz.threadPool.threadCount=20
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 
 ###Project Property
 jsch.configuration.key=StrictHostKeyChecking
 jsch.configuration.value=no
 channel.type=sftp
-secure.file.location=/home/appadmin/dotmed_project/secret_files
-local.file.location=/home/appadmin/dotmed_project/local_storage
+secure.file.location=/data/app/dotmed_project/secret_files
+local.file.location=//data/app/dotmed_project/local_storage
+
+###Custom thread pool size
+custom.threadpool.size=20
 
